--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,35 +8,25 @@
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
 -->
-<html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
+<html lang="{{ site.locale | slice: 0,2 | default: "en" }}">
   <head>
     {% include head.html %}
     {% include head/custom.html %}
   </head>
 
-  <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
-    {% include_cached skip-links.html %}
+  <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">    
     {% include_cached browser-upgrade.html %}
     {% include masthead.html %}
 
-    <div class="initial-content">
-      {{ content }}
-    </div>
-
-    {% if site.search == true %}
-      <div class="search-content">
-        {% include_cached search/search_form.html %}
+      <div class="container mt-3 d-block flex-grow-1">
+        {{ content }}
       </div>
-    {% endif %}
 
-    <div id="footer" class="page__footer">
-      <footer>
+      <footer class="container mt-3">
         {% include footer/custom.html %}
         {% include_cached footer.html %}
       </footer>
-    </div>
 
-    {% include scripts.html %}
-
+      {% include scripts.html %}
   </body>
 </html>
