--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
- <div class="row pt-2 d-flex pb-4">
+ <div class="row pt-2 d-flex pb-4 ms-1">
    <div class="col-md-6 col-sm-12 d-flex">
       <p><b>&copy; {{ site.time | date: '%Y' }} EKA2L1. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow"> Jekyll</a>, <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a> &amp; <a href="https://mdbootstrap.com/" rel="nofollow">MDBootstrap</a></b></p>
    </div>
