--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,7 @@
 <meta property="og:url" content="/">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="EKA2L1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="icon" href="/assets/main/duck_tank.png"></link>
 
