--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -30,7 +30,7 @@
                 {%- endfor -%}
         </ul>
 
-        <div class="navbar-divider d-sm-none d-lg-block">&nbsp;</div>
+        <div class="navbar-divider d-none d-lg-block">&nbsp;</div>
         <ul class="navbar-nav nav-right justify-content-end">
           <li class="nav-item nav-link d-flex align-items-center">
             <input type="checkbox" class="toggle-checkbox" id="toggle-checkbox" autocompleted>
