--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -46,7 +46,7 @@ layout: default
                         </nav>
                     </aside>
                 </div>
-                <div class="col-md-9 col-sm-12 order-md-1 pe-5">
+                <div class="col-md-9 col-sm-12 order-md-1 pe-md-5">
                     {{ content }}
                 </div>
             </div>
