--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -52,7 +52,9 @@ layout: default
             </div>
         </div>
         {% else %}
-            {{ content }}
+          <div class="container d-block ms-sm-1 me-sm-1">
+              {{ content }}
+          </div>
         {% endif %}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
