Add ads and more SEO focused keywords

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,16 +13,17 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3203591900745886" crossorigin="anonymous"></script>
 
 <meta name="author" content="EKA2L1">
 <meta name="copyright" content="EKA2L1">
-<meta name="description" content="A Symbian OS Emulator. Allow you to enjoy all Symbian, N-Gage and N-Gage 2.0 apps or games on your desktop or your morden smartphone.">
-<meta property="og:title" content="An experimental Symbian OS Emulator">
-<meta property="og:description" content="A Symbian OS Emulator. Allow you to enjoy all Symbian, N-Gage and N-Gage 2.0 apps or games on your desktop or your morden smartphone.">
+<meta name="description" content="A Symbian OS Emulator/N-Gage emulator. Allow you to play all Symbian, N-Gage and N-Gage 2.0 apps or games on your desktop or your morden smartphone (Android).">
+<meta property="og:title" content="An experimental Symbian OS Emulator/N-Gage emulator">
+<meta property="og:description" content="A Symbian OS Emulator/N-Gage emulator. Allow you to play all Symbian, N-Gage and N-Gage 2.0 apps or games on your desktop or your morden smartphone (Android).">
 <meta property="og:image" content="/assets/main/duck_tank.png">
 <meta property="og:url" content="/">
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="EKA2L1">
+<meta property="og:site_name" content="EKA2L1 - A Symbian OS/N-Gage emulator">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="icon" href="/assets/main/duck_tank.png"></link>
